--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
     testImplementation 'com.codeborne:selenide:5.11.0'
     testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.30'
-    implementation 'io.rest-assured:rest-assured:4.3.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'io.rest-assured:rest-assured:4.3.0'
+    testImplementation 'com.google.code.gson:gson:2.8.6'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
 
     compileOnly 'org.projectlombok:lombok:1.18.16'
     annotationProcessor 'org.projectlombok:lombok:1.18.16'
